force-app/main/default/objects/DriveErrorLogEvent__e/DriveErrorLogEvent__e.object-meta.xml
<CustomObject>
    <label>DriveErrorLogEvent</label>
    <pluralLabel>DriveErrorLogEvents</pluralLabel>
</CustomObject>