force-app/main/default/objects/DriveErrorLogEvent__e/fields/Component_Context__c.field-meta.xml
<CustomField>
    <fullName>Component_Context__c</fullName>
    <label>Component Context</label>
    <length>200</length>
    <type>Text</type>
</CustomField>